# blockvote

./: .gitignore  README.md  req.txt
nft_id_contract/: .gitignore  .prettierignore  Anchor.toml  package-lock.json  package.json  program-keypair.json
nft_id_contract/.anchor/: deployer-wallet.json  nft_id_contract-keypair.json
nft_id_contract/manual_tests/: manual_token_burn.ts
nft_id_contract/programs/nft_id_contract/: Cargo.toml
nft_id_contract/programs/nft_id_contract/src/: lib.rs
nft_id_contract/tests/: nft_id_contract.ts
utils/: extract_id.py
