[package]
name = "nft_id_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_id_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata", "token"] }
mpl-token-metadata = "5.0.0"
solana-program = "1.16.0"

[profile.dev]
opt-level = "s"
lto = "fat"
codegen-units = 1
overflow-checks = true
